# linuxx

./: 0.txt  tcp_server  tcp_server.cpp  test.txt
2data/: 1seqlist.c
alg/cc/: 1movezeros.c  2repeatzeros.c  a.out  makefile
alg/cpp/: 1movezeros.cpp  a.out  makefile
bit_cpp/: a.out  inheritance.cc
book/: 3iochapter.c  a.out  chapter.c
book/linux_ser/: 14lwp.c  makefile
c_file/: 1fopen.c  2fputc.c  3fgetc.c  4futs.c  5fgets.c  6fprint.c  7fscanf.c  8fwrite.c  9fread.c  a.out  test.txt
cc/: 1file_c.c  2file_s.c  3file_f.c  4pointer.c  a.out  makefile  test.txt
class/class1/: a.out  class1.cc  class1.i  class1.s  makefile
class/class2/: class2.cc  class2.i  class2.s  makefile
class/class3/: a.out  class2.cc  class3.cc  makefile
cmake/v1/: CMakeLists.txt  div.cpp
cmake/v10/: CMakeLists.txt  main.cpp
cmake/v11set/: CMakeLists.txt
cmake/v2/: CMakeLists.txt  add.cpp
cmake/v3/: CMakeLists.txt  mul.cpp  sub.cpp
cmake/v4/: CMakeLists.txt
cmake/v5/: CMakeLists.txt
cmake/v6/: CMakeLists.txt  main.cpp
cmake/v7/: CMakeLists.txt
cmake/v8/: CMakeLists.txt
cmake/v9/: CMakeLists.txt
cpp/: CMakeLists.txt  a.out  c++11.cpp  c++11_app  makefile  string.cpp
data_struct/: a.out  seqlist.c
data_struct/c/: 1seqlist.c  2seqlistnode.c  a.out  makefile
data_struct/cc/: 1seqlist.c  2seqlistnode.c  3list.c  4stack.c  5queue.c  6bintree.c  7BSTree.c  8AVLTree.c  9heap.c  a.out  makefile
data_struct/cpp/: 1seqlist.c  1seqlist.cpp  2seqlistnode.cpp  2slist.cpp  3list.cpp  8AVLTree.cpp  9RBTree.cpp  a.out  makefile  string.cpp
dir/: 1fork.c  2env.c  a.out
dir_c/: 3指针.c  a.out
dir_c/mem/: 1memcpy.c  a.out
heima_cpp/step1/: 0模板.cc  100学生.cc  101访问权限.cc  a.out  (+30 more)
lesson1/: class1.txt  test.cpp
lesson10/: class10.txt  test.c  test.s
lesson11/: a.out  class11.txt  makefile  process.c  test.c
lesson12/: a.out  class12.txt  linux_process.c  makefile  myprocess  process.c
lesson13/: a.out  class13.txt  env.c  myprocess  process.c  zombie.c
lesson14/: class14.txt  env.c  makefile
lesson15/: a.out  class15.txt  process.c
lesson16/: a.out  class16.txt  fork.c  mytest  mytest.c  wait.c
lesson17/: a.out  class17.txt  last_test.c  makefile  test.c
lesson18/: a.out  class18.txt  fd.c  file.c  myshell.c  proc.c
lesson19/: class19.txt  dup2.c  dup3.c  myfile.c  myshell.c
lesson2/: class2.txt
lesson20/: class20.txt
lesson21/: class21.txt
lesson23/: class23.txt
lesson24/: class24.txt  pipe.cc
lesson25/: class25.txt
lesson26/: class26.txt
lesson28/: class28.txt  core.10353  makefile  mysignal  mysignal.cc
lesson3/: class3.txt  temp.txt
lesson4/: class4.txt  test.c
lesson5/: class5.txt
lesson6/: a.out  class6.txt
lesson7/: a.out  class7.txt  test  test.c  test.i  test.s
lesson8/: a.out  class8.txt  makefile  makefile1  process.c  test.c
lesson9/: a.out  class9.txt  main.c  makefile  process.c  test.c
makefile/: makefile  myproject  test.c
shell/: echo.sh  shell.txt  test.sh
sys/: a.out  opendir.c
tanx/: tanx
test/: a.out  main.c  test.c
thread/: 1thread.c  aa
win/: win.cc
yum_source/: yum.txt
(+534 files in other folders)
